--- a/memo.html
+++ b/memo.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang='ja'>
+
 <head>
     <meta charset="utf-8">
     <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
@@ -7,7 +8,35 @@
 </head>
 <h1>memo</h1>
 <textarea id="memo" rows="10" cols="50" name="40"></textarea>
-<p><input type="button" id="save" value="保存">
+<p>
+    <input type="button" id="save" value="保存">
     <input type="button" id="delete" value="削除">
 </p>
-</html> 
+<script>
+    $(function () {
+        /*
+        localStrage.setItem("key","value");
+        localStarge.getItem("key");
+        localStrage.removeItem("key");
+        */
+        if (localStorage.getItem('memo')) {
+            $('#memo').val(localStorage.getItem('memo'));
+        }
+        $('#save').click(function () {
+            localStorage.setItem("memo", $('#memo').val());
+            console.log(localStorage.getItem('memo'));
+        });
+        $('#delete').click(function () {
+            $('#memo').val('');
+            localStorage.removeItem("memo");
+        });
+        (function autosave() {
+            localStorage.setItem("memo", $('#memo').val());
+            setTimeout(autosave, 1000);
+        })();
+    });
+
+
+</script>
+
+</html>
