#3 リファクタ

--- a/GeolocationAPI.html
+++ b/GeolocationAPI.html
@@ -6,16 +6,25 @@
 </head>
 
 <body>
-	<h1>位置情報取得サンプル</h1>
+    <h1 >位置情報取得サンプル</h1>
+    <p id='comment'></p>
 	<p id='result'></p>
 
 	<script>
         // Geolocation APIに対応している
         if (navigator.geolocation) {
-            alert("この端末では位置情報が取得できます");
-            // Geolocation APIに対応していない
+            var p = document.getElementById('comment');
+            var div = document.createElement('div');
+            div.textContent = "この端末では位置情報が取得できます";
+            p.appendChild(div);
+            //alert("この端末では位置情報が取得できます");
+        // Geolocation APIに対応していない
         } else {
-            alert("この端末では位置情報が取得できません");
+            //alert("この端末では位置情報が取得できません");
+            var p = document.getElementById('comment');
+            var div = document.createElement('div');
+            div.textContent = "この端末では位置情報が取得できません";
+            p.appendChild(div);
         }
 
         // 現在地取得処理
